# SuperSpartyGame

./: .gitignore  CMakeLists.txt  GameApp.cpp  GameApp.h  main.cpp  pch.h
Project1Lib/: Background.cpp  Background.h  CMakeLists.txt  Declarations.cpp  Declarations.h  Declerations.cpp  Declerations.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameView.cpp  GameView.h  IsEnemyVisitor.cpp  IsEnemyVisitor.h  IsPlatformVisitor.cpp  IsPlatformVisitor.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  MoneyVisitor.cpp  MoneyVisitor.h  Platform.cpp  Platform.h  PowerUp.cpp  PowerUp.h  ReversePower.cpp  ReversePower.h  Scoreboard.cpp  Scoreboard.h  Sparty.cpp  (+9 more)
Tests/: CMakeLists.txt  DoorTest.cpp  EnemyTest.cpp  GameTest.cpp  ItemTest.cpp  Level.cpp  ReverseTest.cpp  SpartyTest.cpp
levels/: level0.xml  level3.xml
